<resources>
    <string name="app_name">Vacancy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vacancies">Вакансии</string>
    <string name="count_vacancies">%d вакансии</string>
    <string name="top">Топ %s</string>
    <string name="industry">Отрасль:</string>
    <string name="conditions">Условия:</string>
    <string name="description">Описание:</string>
    <string name="more">Подробнее</string>
    <string name="top_pie_chart">ТОП - %d</string>
    <string name="top_title">ТОП - %d %s</string>
    <string name="list_of_vacancies">Список вакансии</string>
    <string name="respond">Откликнуться</string>
    <string name="about_the_employer">О работодателе:</string>

    <string name="description_emp">Описание:</string>
    <string name="website">Сайт:</string>
    <string name="contacts">Контакты:</string>
    <string name="city">Город:</string>
    <string name="address">Адрес:</string>
    <string name="email">Почта</string>
    <string name="edit">Редактировать</string>
    <string name="hide_information">Скрыть информацию</string>
    <string name="user_avatar">user avatar</string>
    <string name="generate_a_resume">Сформировать резюме</string>
    <string name="view_cv">Просмотреть</string>
    <string name="send">Отправить</string>
    <string name="phone_number">Контактный номер</string>
    <string name="avg_gpa">Средний GPA</string>
    <string name="photo">Фото</string>
    <string name="skill">Навыки</string>
    <string name="achievements">Достижения</string>
    <string name="experience">Опыт</string>
</resources>